--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -56,3 +56,69 @@
 		<%= image_tag "arrow.png"  %>
 	</a>
 </span>
+
+<script>
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu1.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu2.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu3.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu4.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu5.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu6.png"
+	});
+	});
+</script>
